--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -38,7 +38,7 @@
       if (data) {
         $('#achievement_alert').addClass('achievement_show');
         $('#achievement_text').html(data);
-        $('<audio id="achievementAudio"><source src="/victory_fanfare.mp3" type="audio/mpeg"></audio>').appendTo('body');
+        $('<audio id="achievementAudio"><source src="/zelda_treasure.mp3" type="audio/mpeg"></audio>').appendTo('body');
         document.getElementById('achievementAudio').play();
         setTimeout(function() {
           $('#achievement_alert').removeClass('achievement_show');
