--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -38,8 +38,24 @@
       if (data) {
         $('#achievement_alert').addClass('achievement_show');
         $('#achievement_text').html(data);
-        $('<audio id="achievementAudio"><source src="/zelda_treasure.mp3" type="audio/mpeg"></audio>').appendTo('body');
+        $('<audio id="achievementAudio"><source src="/music/zelda_treasure.mp3" type="audio/mpeg"></audio>').appendTo('body');
         document.getElementById('achievementAudio').play();
+        setTimeout(function() {
+          $('#achievement_alert').removeClass('achievement_show');
+        }, 6500);
+      }
+    });
+  }
+</script>
+
+<script>
+  function questionRight(id) {
+    $.post('/achievement/' + id, function (data) {
+      if (data) {
+        $('#achievement_alert').addClass('achievement_show');
+        $('#achievement_text').html(data);
+        $('<audio id="rightAudio"><source src="/music/victory_fanfare.mp3" type="audio/mpeg"></audio>').appendTo('body');
+        document.getElementById('rightAudio').play();
         setTimeout(function() {
           $('#achievement_alert').removeClass('achievement_show');
         }, 6500);
