--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -165,6 +165,10 @@
 
               // Passed
               if (score >= threshold) {
+
+                $('<audio id="achievementAudio"><source src="/music/victory_fanfare.mp3" type="audio/mpeg"></audio>').appendTo('body');
+                document.getElementById('achievementAudio').play();
+
                 alert("You passed! Score: " + score);
 
                 if (seconds <= 30) {
@@ -174,6 +178,10 @@
 
               // Failed
               else {
+
+                $('<audio id="achievementAudio"><source src="/music/mario_death.mp3" type="audio/mpeg"></audio>').appendTo('body');
+                document.getElementById('achievementAudio').play();
+
                 alert("You failed! You got: " + score + " but needed: " + threshold);
 
                 achievementGet(8);
