--- a/views/ref_bases.ejs
+++ b/views/ref_bases.ejs
@@ -6,7 +6,7 @@
 
 <ol>
   <li>
-    Number the digits starting from 0 and going towards the left. The leftmost digit should end up as (number of digits) - 1 <br>
+    Number the digits starting from 0 and going from right to left. The leftmost digit should end up as (number of digits) - 1 <br>
 
     ex. 10110010<br><br>
 
@@ -249,7 +249,7 @@
   <br>
 
   <li>
-    Number the digits starting from 0 and going towards the left. The leftmost digit should end up as (number of digits) - 1<br>
+    Number the digits starting from 0 and going from right to left. The leftmost digit should end up as (number of digits) - 1<br>
 
     ex.<br>
 
